# marimo-lunch-and-learn

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_intro.py  01_plotting.py  02_art.py  02_explore.py  _live_00_intro.py  _live_01_plotting.py  _live_02_explore.py  tsne.parquet
scripts/: Cargo.toml  README.md  embed.py  tsne.py
scripts/src/: main.rs
