[project]
name = "marimo-lunch-and-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "jupyter-scatter>=0.22.2",
    "marimo[recommended]>=0.18.4",
    "quak>=0.3.3",
    "seaborn>=0.13.2",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
]
